--- a/package.json
+++ b/package.json
@@ -19,7 +19,16 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@types/jquery": "^3.3.38",
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
+    "jquery-mobile": "^1.4.1",
+    "jquery-ui": "^1.12.1",
+    "ng2-ion-range-slider": "^2.0.0",
+    "ngx-order-pipe": "^2.0.4",
+    "ngx-slick-carousel": "^0.5.1",
     "rxjs": "~6.4.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
